// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel Component should render without issues 1`] = `
<View
  style={
    Array [
      74,
      undefined,
    ]
  }
>
  <TextElement
    style={
      Object {
        "color": "#86939e",
        "fontSize": 12,
        "fontWeight": "bold",
        "marginBottom": 1,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 15,
      }
    }
  />
</View>
`;

exports[`Forms: FormLabel: Props Forms: FormLabel: [ prop: containerStyle ] enzyme-mount: snapshot: Forms: FormLabel: [ prop: containerStyle ] enzyme-mount: snapshot 1`] = `
<FormLabel
  containerStyle={
    Object {
      "backgroundColor": "#2ff",
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#2ff",
        "padding": 5,
      }
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-position-bnwqim rn-zIndex-1lgpqti"
      style={
        Object {
          "backgroundColor": "rgba(34,255,255,1)",
          "paddingBottom": "5px",
          "paddingLeft": "5px",
          "paddingRight": "5px",
          "paddingTop": "5px",
        }
      }
    >
      <TextElement
        style={
          Object {
            "color": "#86939e",
            "fontSize": 12,
            "fontWeight": "bold",
            "marginBottom": 1,
            "marginLeft": 20,
            "marginRight": 20,
            "marginTop": 15,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#86939e",
              "fontSize": 12,
              "fontWeight": "bold",
              "marginBottom": 1,
              "marginLeft": 20,
              "marginRight": 20,
              "marginTop": 15,
            }
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-fontWeight-vw2c0b rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
          >
            enter something
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormLabel>
`;

exports[`Forms: FormLabel: Props Forms: FormLabel: [ prop: containerStyle ] enzyme-render: snapshot: Forms: FormLabel: [ prop: containerStyle ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-position-bnwqim rn-zIndex-1lgpqti"
  style="background-color:rgba(34,255,255,1);padding-top:5px;padding-right:5px;padding-bottom:5px;padding-left:5px"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-fontWeight-vw2c0b rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
  >
    enter something
  </div>
</div>
`;

exports[`Forms: FormLabel: Props Forms: FormLabel: [ prop: containerStyle ] enzyme-shallow: snapshot: Forms: FormLabel: [ prop: containerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2ff",
      "padding": 5,
    }
  }
>
  <TextElement
    style={
      Object {
        "color": "#86939e",
        "fontSize": 12,
        "fontWeight": "bold",
        "marginBottom": 1,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 15,
      }
    }
  >
    enter something
  </TextElement>
</View>
`;

exports[`Forms: FormLabel: Props Forms: FormLabel: [ prop: fontFamily ] enzyme-mount: snapshot: Forms: FormLabel: [ prop: fontFamily ] enzyme-mount: snapshot 1`] = `
<FormLabel
  fontFamily="Courier New"
>
  <View
    style={
      Array [
        74,
        undefined,
      ]
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
    >
      <TextElement
        style={
          Object {
            "color": "#86939e",
            "fontFamily": "Courier New",
            "fontSize": 12,
            "fontWeight": "bold",
            "marginBottom": 1,
            "marginLeft": 20,
            "marginRight": 20,
            "marginTop": 15,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#86939e",
              "fontFamily": "Courier New",
              "fontSize": 12,
              "fontWeight": "bold",
              "marginBottom": 1,
              "marginLeft": 20,
              "marginRight": 20,
              "marginTop": 15,
            }
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontSize-1enofrn rn-fontWeight-vw2c0b rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
            style={
              Object {
                "fontFamily": "Courier New",
              }
            }
          >
            enter something
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormLabel>
`;

exports[`Forms: FormLabel: Props Forms: FormLabel: [ prop: fontFamily ] enzyme-render: snapshot: Forms: FormLabel: [ prop: fontFamily ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontSize-1enofrn rn-fontWeight-vw2c0b rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
    style="font-family:Courier New"
  >
    enter something
  </div>
</div>
`;

exports[`Forms: FormLabel: Props Forms: FormLabel: [ prop: fontFamily ] enzyme-shallow: snapshot: Forms: FormLabel: [ prop: fontFamily ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      74,
      undefined,
    ]
  }
>
  <TextElement
    style={
      Object {
        "color": "#86939e",
        "fontFamily": "Courier New",
        "fontSize": 12,
        "fontWeight": "bold",
        "marginBottom": 1,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 15,
      }
    }
  >
    enter something
  </TextElement>
</View>
`;

exports[`Forms: FormLabel: Props Forms: FormLabel: [ prop: labelStyle ] enzyme-mount: snapshot: Forms: FormLabel: [ prop: labelStyle ] enzyme-mount: snapshot 1`] = `
<FormLabel
  labelStyle={
    Object {
      "backgroundColor": "#2ff",
      "padding": 5,
    }
  }
>
  <View
    style={
      Array [
        74,
        undefined,
      ]
    }
  >
    <div
      className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
    >
      <TextElement
        style={
          Object {
            "backgroundColor": "#2ff",
            "color": "#86939e",
            "fontSize": 12,
            "fontWeight": "bold",
            "marginBottom": 1,
            "marginLeft": 20,
            "marginRight": 20,
            "marginTop": 15,
            "padding": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "backgroundColor": "#2ff",
              "color": "#86939e",
              "fontSize": 12,
              "fontWeight": "bold",
              "marginBottom": 1,
              "marginLeft": 20,
              "marginRight": 20,
              "marginTop": 15,
              "padding": 5,
            }
          }
        >
          <div
            className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-fontWeight-vw2c0b rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
            dir="auto"
            style={
              Object {
                "backgroundColor": "rgba(34,255,255,1)",
                "paddingBottom": "5px",
                "paddingLeft": "5px",
                "paddingRight": "5px",
                "paddingTop": "5px",
              }
            }
          >
            enter something
          </div>
        </Text>
      </TextElement>
    </div>
  </View>
</FormLabel>
`;

exports[`Forms: FormLabel: Props Forms: FormLabel: [ prop: labelStyle ] enzyme-render: snapshot: Forms: FormLabel: [ prop: labelStyle ] enzyme-render: snapshot 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
>
  <div
    class="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-zzr6i3 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1enofrn rn-fontWeight-vw2c0b rn-marginBottom-10sqg0u rn-marginLeft-1joea0r rn-marginRight-1mf7evn rn-marginTop-19h5ruw rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
    dir="auto"
    style="background-color:rgba(34,255,255,1);padding-top:5px;padding-right:5px;padding-bottom:5px;padding-left:5px"
  >
    enter something
  </div>
</div>
`;

exports[`Forms: FormLabel: Props Forms: FormLabel: [ prop: labelStyle ] enzyme-shallow: snapshot: Forms: FormLabel: [ prop: labelStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Array [
      74,
      undefined,
    ]
  }
>
  <TextElement
    style={
      Object {
        "backgroundColor": "#2ff",
        "color": "#86939e",
        "fontSize": 12,
        "fontWeight": "bold",
        "marginBottom": 1,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 15,
        "padding": 5,
      }
    }
  >
    enter something
  </TextElement>
</View>
`;
